--- a/src/Components/Pages/Auth-Pages/Login/Login.scss
+++ b/src/Components/Pages/Auth-Pages/Login/Login.scss
@@ -1,6 +1,6 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -9,6 +9,20 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 50px;
+  height: 89vh;
+  @media screen and (max-width: 1000px) {
+    justify-content: center;
+    gap: 40px;
+    flex-direction: column;
+  }
+  @media screen and (max-width: 600px) {
+    padding: 40px 20px;
+    height: 100%;
+  }
+  @media screen and (max-width: 500px) {
+    padding: 40px 10px;
+  }
+
   .auth-left-login {
     display: flex;
     align-items: flex-start;
@@ -16,11 +30,22 @@
     flex-direction: column;
     gap: 20px;
     width: 50%;
+    @media screen and (max-width: 1000px) {
+      align-items: center;
+      width: 100%;
+    }
+    h1 {
+      @media screen and (max-width: 1000px) {
+        text-align: center;
+      }
+    }
+
     ul {
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 80px;
+
       li {
         display: flex;
         align-items: center;
@@ -29,32 +54,51 @@
       }
     }
   }
-  .auth-right-con {
+
+  .auth-right-login {
     display: flex;
     align-items: center;
-    justify-self: center;
-    .bgc {
+    justify-content: center;
+    width: 45%;
+    @media screen and (max-width: 1000px) {
       width: 100%;
     }
+
     .login-card {
-      position: absolute;
-      right: 7%;
-      width: 34%;
-      height: 70%;
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
       gap: 24px;
-      padding: 0 20px;
+      padding: 45px 20px;
       border-radius: 20px;
       background-color: #fff;
-      z-index: 10;
+      box-shadow: -5px 0px 20px rgba(68, 188, 255, 0.3),
+        -5px 0px 5px rgba(68, 176, 255, 0.3),
+        0px 2px 10px rgba(255, 68, 236, 0.3),
+        0px -5px 10px rgba(255, 68, 236, 0.3),
+        5px 0px 20px rgba(212, 69, 81, 0.3);
+      @media screen and (max-width: 1000px) {
+        width: 80%;
+      }
+      @media screen and (max-width: 550px) {
+        width: 100%;
+      }
+      @media screen and (max-width: 500px) {
+        box-shadow: none;
+        border-radius: none;
+      }
+
       h2 {
         text-align: left;
         width: 100%;
         margin-bottom: 30px;
+        @media screen and (max-width: 1000px) {
+          text-align: center;
+        }
       }
+
       form {
         display: flex;
         align-items: center;
@@ -62,6 +106,7 @@
         flex-direction: column;
         gap: 24px;
         width: 100%;
+
         .input {
           display: flex;
           align-items: flex-start;
@@ -69,6 +114,7 @@
           flex-direction: column;
           gap: 20px;
           width: 100%;
+
           input {
             background-color: #fff;
             border: 1px solid var(--gray-200, #e4e4e7);
@@ -76,11 +122,13 @@
             width: 100%;
           }
         }
+
         .rem-pass {
           display: flex;
           align-items: center;
           justify-content: space-between;
           width: 100%;
+          margin-top: -15px;
           .rem {
             display: flex;
             align-items: center;
@@ -88,6 +136,7 @@
             gap: 10px;
           }
         }
+
         button {
           display: flex;
           width: 60%;
@@ -100,8 +149,12 @@
           border-radius: 9px;
           background-color: #7e57c2;
           color: #fff;
+          @media screen and (max-width: 400px) {
+            width: 80%;
+          }
         }
       }
+
       button {
         display: flex;
         width: 60%;
@@ -112,6 +165,9 @@
         gap: 10px;
         border-radius: 9px;
         background-color: var(--blue-gray-50, #f8fafc);
+        @media screen and (max-width: 400px) {
+          width: 80%;
+        }
       }
     }
   }
