--- a/src/Components/Layouts/Navbar/Navbar.scss
+++ b/src/Components/Layouts/Navbar/Navbar.scss
@@ -1,6 +1,6 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -12,34 +12,115 @@
   position: sticky;
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 20;
-  top: 0px;
+  top: 0;
   width: 100%;
-  .navbar-left {
+  gap: 90px;
+
+  .nav-toggle {
+    display: none;
+    @media screen and (max-width: 600px) {
+      display: block;
+      height: 20px;
+      width: 20px;
+    }
+  }
+
+  .nav-items {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 60px;
+    width: 100%;
+
     ul {
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 10px;
+
       li {
         list-style: none;
       }
     }
+    .link {
+      button {
+        display: flex;
+        width: 146.296px;
+        height: 45px;
+        padding: 16px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 10px;
+        background: #7e57c2;
+        color: #fff;
+      }
+    }
   }
-  button {
-    display: flex;
-    width: 146.296px;
-    height: 45px;
-    padding: 16px;
+
+  .toggle-icon {
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .nav-items {
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 10px;
-    background: #7e57c2;
-    color: #fff;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #fdfff5;
+    overflow: hidden;
+    margin-right: 0;
+    padding: 30px;
+    transform: translateX(-100%); /* Initially, move the menu off-screen */
+    animation: slideIn 0.5s ease-in-out forwards;
+    display: block;
+    justify-content: flex-start !important;
+    align-items: flex-start !important;
+
+    @keyframes slideIn {
+      from {
+        transform: translateX(-100%);
+      }
+      to {
+        transform: translateX(0);
+      }
+    }
+
+    ul {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 0;
+
+      li {
+        padding: 5px 10px;
+        width: 100%;
+        list-style: none;
+      }
+    }
+    .link {
+      margin-top: -40px;
+      button {
+        display: flex;
+        width: 146.296px;
+        height: 45px;
+        padding: 16px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 10px;
+        background: #7e57c2;
+        color: #fff;
+      }
+    }
   }
+}
+.null {
+  display: none;
 }
