--- a/src/reusableComps/design.scss
+++ b/src/reusableComps/design.scss
@@ -7,13 +7,17 @@
 
 button {
   border: none;
+  cursor: pointer;
 }
 
-.input {
-  input {
-    border: none;
-    height: 40px;
-    padding: 0px 10px;
-    border-radius: 5px;
-  }
+input {
+  border: none;
+  height: 40px;
+  padding: 0px 10px;
+  border-radius: 5px;
+  outline: none;
+}
+
+.link {
+  text-decoration: none;
 }
