--- a/src/Components/Layouts/Navbar/Navbar.scss
+++ b/src/Components/Layouts/Navbar/Navbar.scss
@@ -26,12 +26,68 @@
   }
 
   .nav-items {
+    display: none;
+    @media screen and (max-width: 600px) {
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: #fdfff5;
+      margin-right: 0;
+      padding: 30px;
+      transform: translateX(-100%); /* Initially, move the menu off-screen */
+      animation: slideIn 0.5s ease-in-out forwards;
+      display: block;
+      justify-content: flex-start !important;
+      align-items: flex-start !important;
+
+      @keyframes slideIn {
+        from {
+          transform: translateX(-100%);
+        }
+        to {
+          transform: translateX(0);
+        }
+      }
+
+      ul {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+
+        li {
+          padding: 5px 10px;
+          width: 100%;
+          list-style: none;
+        }
+      }
+      .link {
+        button {
+          margin-top: 10px;
+          display: flex;
+          width: 146.296px;
+          height: 45px;
+          padding: 16px;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+          border-radius: 10px;
+          background: #7e57c2;
+          color: #fff;
+        }
+      }
+    }
+  }
+
+  .null {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 60px;
     width: 100%;
-
     ul {
       display: flex;
       align-items: center;
@@ -57,6 +113,9 @@
         color: #fff;
       }
     }
+    @media screen and (max-width: 600px) {
+      display: none;
+    }
   }
 
   .toggle-icon {
@@ -64,63 +123,58 @@
   }
 }
 
-@media screen and (max-width: 600px) {
-  .nav-items {
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #fdfff5;
-    overflow: hidden;
-    margin-right: 0;
-    padding: 30px;
-    transform: translateX(-100%); /* Initially, move the menu off-screen */
-    animation: slideIn 0.5s ease-in-out forwards;
-    display: block;
-    justify-content: flex-start !important;
-    align-items: flex-start !important;
+// @media screen and (max-width: 600px) {
+//   .nav-items {
+//     flex-direction: column;
+//     position: absolute;
+//     top: 60px;
+//     left: 0;
+//     width: 100%;
+//     height: 100vh;
+//     background-color: #fdfff5;
+//     overflow: hidden;
+//     margin-right: 0;
+//     padding: 30px;
+//     transform: translateX(-100%); /* Initially, move the menu off-screen */
+//     animation: slideIn 0.5s ease-in-out forwards;
+//     display: block;
+//     justify-content: flex-start !important;
+//     align-items: flex-start !important;
 
-    @keyframes slideIn {
-      from {
-        transform: translateX(-100%);
-      }
-      to {
-        transform: translateX(0);
-      }
-    }
+//     @keyframes slideIn {
+//       from {
+//         transform: translateX(-100%);
+//       }
+//       to {
+//         transform: translateX(0);
+//       }
+//     }
 
-    ul {
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: flex-start;
-      gap: 0;
+//     ul {
+//       flex-direction: column;
+//       align-items: flex-start;
+//       justify-content: flex-start;
 
-      li {
-        padding: 5px 10px;
-        width: 100%;
-        list-style: none;
-      }
-    }
-    .link {
-      margin-top: -40px;
-      button {
-        display: flex;
-        width: 146.296px;
-        height: 45px;
-        padding: 16px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        border-radius: 10px;
-        background: #7e57c2;
-        color: #fff;
-      }
-    }
-  }
-}
-.null {
-  display: none;
-}
+//       li {
+//         padding: 5px 10px;
+//         width: 100%;
+//         list-style: none;
+//       }
+//     }
+//     .link {
+//       button {
+//         display: flex;
+//         width: 146.296px;
+//         height: 45px;
+//         padding: 16px;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//         gap: 10px;
+//         border-radius: 10px;
+//         background: #7e57c2;
+//         color: #fff;
+//       }
+//     }
+//   }
+// }
