--- a/src/Components/Pages/LandingPage/LandingPage.scss
+++ b/src/Components/Pages/LandingPage/LandingPage.scss
@@ -3,3 +3,88 @@
   padding: 0px;
   box-sizing: border-box;
 }
+
+.landing-page {
+  padding: 0px 50px;
+  @media screen and (max-width: 1024px) {
+    padding: 0px 15px;
+  }
+  .hero {
+    @media screen and (max-width: 1024px) {
+      flex-direction: column;
+    }
+    .hero-top-text {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+      gap: 20px;
+      width: 60%;
+      padding: 30px 0px;
+      @media screen and (max-width: 1024px) {
+        width: 100%;
+      }
+      span {
+        color: var(--gray-500, #71717a);
+        font-style: normal;
+        font-weight: 600;
+        width: 100%;
+      }
+      h1 {
+        background: linear-gradient(
+          90deg,
+          #12c2e9 0%,
+          #c471ed 50%,
+          #f64f59 100%
+        );
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 450%;
+        font-weight: 800;
+        line-height: 80px;
+        @media screen and (max-width: 768px) {
+          font-size: 350%;
+          line-height: 65px;
+        }
+      }
+      p {
+        color: #71717a;
+        font-weight: 400;
+        line-height: 28px;
+      }
+    }
+    .hero-images {
+      position: absolute;
+      right: 0px;
+      top: 300px;
+      width: 60%;
+      @media screen and (max-width: 1024px) {
+        position: relative;
+        width: 100%;
+      }
+      .img-floor {
+        position: absolute;
+        right: 0px;
+        top: -200px;
+        width: 700px;
+        @media screen and (max-width: 1024px) {
+          position: absolute;
+          width: 100%;
+          overflow: hidden;
+          top: -350px;
+        }
+      }
+      .hero-prototype {
+        position: absolute;
+        right: 30px;
+        top: -50px;
+        @media screen and (max-width: 1024px) {
+          left: 0px;
+          width: 100%;
+          top: -300px;
+        }
+      }
+    }
+  }
+}
