--- a/src/reusableComps/font.scss
+++ b/src/reusableComps/font.scss
@@ -4,22 +4,6 @@
   box-sizing: border-box;
 }
 
-@mixin responsive-font-size(
-  $min-font-size,
-  $max-font-size,
-  $min-screen-width,
-  $max-screen-width
-) {
-  $font-size-range: $max-font-size - $min-font-size;
-  $screen-width-range: $max-screen-width - $min-screen-width;
-
-  font-size: calc(
-    #{$min-font-size}px + #{$font-size-range} * ((
-            100vw - #{$min-screen-width}px
-          ) / #{$screen-width-range})
-  );
-}
-
 // Mixin definition
 @mixin responsive-font-size(
   $min-font-size,
@@ -39,7 +23,7 @@
 
 // Applying the mixin to various tags
 p {
-  @include responsive-font-size(16, 20, 320, 2000);
+  @include responsive-font-size(14, 20, 320, 2000);
 }
 
 ul {
@@ -54,24 +38,31 @@ h1 {
   @include responsive-font-size(24, 36, 320, 1200);
 }
 
+h3 {
+  @include responsive-font-size(16, 30, 320, 5000);
+}
+h4 {
+  @include responsive-font-size(14, 30, 320, 6000);
+}
+
 h2 {
-  @include responsive-font-size(20, 30, 320, 1200);
+  @include responsive-font-size(20, 30, 320, 3000);
 }
 
 span {
   @include responsive-font-size(12, 16, 320, 1800);
 }
 
-main {
-  @include responsive-font-size(18, 24, 320, 1200);
-}
+// main {
+//   @include responsive-font-size(18, 24, 320, 1200);
+// }
 
-header {
-  @include responsive-font-size(18, 26, 320, 1200);
-}
+// header {
+//   @include responsive-font-size(18, 26, 320, 1200);
+// }
 
-caption {
-  @include responsive-font-size(14, 18, 320, 1200);
-}
+// caption {
+//   @include responsive-font-size(14, 18, 320, 1200);
+// }
 
 /* Add more styles for other tags as needed */
