--- a/src/Components/Layouts/Footer/Footer.scss
+++ b/src/Components/Layouts/Footer/Footer.scss
@@ -5,4 +5,84 @@
 }
 
 footer {
+  padding: 80px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 30px;
+  @media screen and (max-width: 550px) {
+    padding: 80px 20px;
+  }
+  .footer-top {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 50px;
+    @media screen and (max-width: 1000px) {
+      flex-direction: column;
+    }
+    .left-side {
+      padding: 0px 100px 0px 0px;
+      @media screen and (max-width: 550px) {
+        padding: 0px;
+      }
+    }
+    .right-side {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 31px;
+      @media screen and (max-width: 1000px) {
+        justify-content: space-between;
+        gap: 50px;
+      }
+      section {
+        flex-wrap: 0 0 150px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+        justify-content: center;
+        @media screen and (max-width: 1000px) {
+          gap: 15px;
+        }
+        header {
+          color: #3f3f46;
+          font-weight: 800;
+          line-height: normal;
+          letter-spacing: 1.6px;
+        }
+        ul {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          align-items: flex-start;
+          justify-content: center;
+          list-style: none;
+          li {
+            color: #3f3f46;
+            font-weight: 600;
+          }
+        }
+        .subscribe {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          width: 269px;
+          height: 48px;
+          padding: 0px 10px 0px 0px;
+          border: 2px #3f3f46 solid;
+          input {
+            width: 100%;
+            height: 45px;
+          }
+        }
+      }
+    }
+  }
+  hr {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 }
