--- a/src/Components/Pages/LandingPage/LandingPage.scss
+++ b/src/Components/Pages/LandingPage/LandingPage.scss
@@ -5,159 +5,258 @@
 }
 
 .landing-page {
-  padding: 0px 50px;
   display: flex;
   flex-direction: column;
-  gap: 250px;
   @media screen and (max-width: 1024px) {
-    padding: 0px 15px;
     gap: 20px;
   }
   .hero {
+    display: flex;
+    flex-direction: column;
+    gap: 250px;
+    padding: 0px 50px 50px 50px;
     @media screen and (max-width: 1024px) {
       flex-direction: column;
+      padding: 0px 15px;
+      gap: 50px;
     }
-    .hero-top-text {
+    .hero-con {
+      @media screen and (max-width: 1024px) {
+        flex-direction: column;
+      }
+      .hero-top-text {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+        width: 60%;
+        padding: 30px 0px;
+        @media screen and (max-width: 1024px) {
+          width: 100%;
+        }
+        span {
+          color: var(--gray-500, #71717a);
+          font-style: normal;
+          font-weight: 600;
+          width: 100%;
+        }
+        h1 {
+          background: linear-gradient(
+            90deg,
+            #12c2e9 0%,
+            #c471ed 50%,
+            #f64f59 100%
+          );
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          font-size: 450%;
+          font-weight: 800;
+          line-height: 80px;
+          @media screen and (max-width: 768px) {
+            font-size: 260%;
+            line-height: 65px;
+          }
+        }
+        p {
+          color: #71717a;
+          font-weight: 400;
+          line-height: 28px;
+        }
+      }
+      .hero-images {
+        position: absolute;
+        right: 0px;
+        top: 300px;
+        width: 60%;
+        @media screen and (max-width: 1024px) {
+          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          top: 0px;
+        }
+        .img-floor {
+          position: absolute;
+          right: 0px;
+          top: -200px;
+          width: 650px;
+          @media screen and (max-width: 1024px) {
+            display: none;
+          }
+        }
+        .hero-prototype {
+          position: absolute;
+          right: 0px;
+          top: -80px;
+          @media screen and (max-width: 1024px) {
+            position: relative;
+            right: 0px;
+            width: 100%;
+            top: 0px;
+          }
+        }
+      }
+      .email-input {
+        display: flex;
+        width: 396px;
+        height: 52px;
+        padding: 2px;
+        align-items: center;
+        flex-shrink: 0;
+        border-radius: 50px;
+        background-color: #3f3f46;
+        overflow: hidden;
+        @media screen and (max-width: 1024px) {
+          display: none;
+        }
+
+        input {
+          background-color: inherit;
+          width: 100%;
+          color: white;
+        }
+        button {
+          display: flex;
+          width: 151px;
+          height: 48px;
+          padding: 10px;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+          flex-shrink: 0;
+          border-radius: 50px;
+          background-color: #7e57c2;
+          color: white;
+        }
+      }
+    }
+  }
+
+  .hero-footer {
+    display: flex;
+    flex-direction: column;
+    padding: 0px 50px 150px 50px;
+    gap: 40px;
+    @media screen and (max-width: 1024px) {
+      padding: 0px 20px 150px 20px;
+    }
+    @media screen and (max-width: 800px) {
+      padding: 0px 20px 50px 20px;
+    }
+    .hero-footer-con {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      @media screen and (max-width: 1024px) {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px;
+      }
+      .hero-footer-r {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+        width: 45%;
+        @media screen and (max-width: 1024px) {
+          width: 100%;
+        }
+        span {
+          color: #3f3f46;
+          font-weight: 400;
+          line-height: 24px; /* 150% */
+        }
+        p {
+          color: var(--bluee, #5729d4);
+          font-weight: 700;
+          text-decoration-line: underline;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          cursor: pointer;
+        }
+      }
+    }
+    .products {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      @media screen and (max-width: 1024px) {
+        flex-direction: column;
+        gap: 20px;
+      }
+      img {
+        width: 370px;
+        height: 300px;
+        @media screen and (max-width: 500px) {
+          width: 300px;
+          height: 230px;
+        }
+      }
+    }
+  }
+  .friendly {
+    background-color: #faf6ff;
+    padding: 60px 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    gap: 50px;
+    @media screen and (max-width: 500px) {
+      flex-direction: column;
+      padding: 50px 20px;
+    }
+    .friendly-img {
+      width: 540px;
+      height: 370px;
+      @media screen and (max-width: 550px) {
+        width: 300px;
+        height: 230px;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .friendly-right {
       display: flex;
       align-items: flex-start;
       justify-content: center;
       flex-direction: column;
       gap: 20px;
-      width: 60%;
-      padding: 30px 0px;
-      @media screen and (max-width: 1024px) {
-        width: 100%;
-      }
-      span {
-        color: var(--gray-500, #71717a);
-        font-style: normal;
-        font-weight: 600;
-        width: 100%;
-      }
-      h1 {
-        background: linear-gradient(
-          90deg,
-          #12c2e9 0%,
-          #c471ed 50%,
-          #f64f59 100%
-        );
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        font-size: 450%;
-        font-weight: 800;
-        line-height: 80px;
-        @media screen and (max-width: 768px) {
-          font-size: 260%;
-          line-height: 65px;
-        }
-      }
-      p {
-        color: #71717a;
-        font-weight: 400;
-        line-height: 28px;
-      }
-    }
-    .hero-images {
-      position: absolute;
-      right: 0px;
-      top: 300px;
-      width: 60%;
-      @media screen and (max-width: 1024px) {
-        position: relative;
+      .store {
         display: flex;
         align-items: center;
-        justify-content: center;
-        width: 100%;
-        top: 0px;
-      }
-      .img-floor {
-        position: absolute;
-        right: 0px;
-        top: -200px;
-        width: 650px;
-        @media screen and (max-width: 1024px) {
-          display: none;
+        justify-content: flex-start;
+        gap: 50px;
+        @media screen and (max-width: 550px) {
+          gap: 10px;
+          flex-direction: column;
+          align-items: flex-start;
+        }
+        .online {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          img {
+            width: 90px;
+            height: 90px;
+          }
         }
       }
-      .hero-prototype {
-        position: absolute;
-        right: 0px;
-        top: -80px;
-        @media screen and (max-width: 1024px) {
-          position: relative;
-          right: 0px;
-          width: 100%;
-          top: 0px;
-        }
-      }
-    }
-    .email-input {
-      display: flex;
-      width: 396px;
-      height: 52px;
-      padding: 2px;
-      align-items: center;
-      flex-shrink: 0;
-      border-radius: 50px;
-      background-color: #3f3f46;
-      overflow: hidden;
-      @media screen and (max-width: 1024px) {
-        display: none;
-      }
-
-      input {
-        background-color: inherit;
-        width: 100%;
-        color: white;
-      }
-      button {
+      ul {
         display: flex;
-        width: 151px;
-        height: 48px;
-        padding: 10px;
+        align-items: flex-start;
         justify-content: center;
-        align-items: center;
-        gap: 10px;
-        flex-shrink: 0;
-        border-radius: 50px;
-        background-color: #7e57c2;
-        color: white;
-      }
-    }
-  }
-  .hero-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 30px;
-    @media screen and (max-width: 1024px) {
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 20px;
-    }
-    .hero-footer-r {
-      display: flex;
-      justify-content: space-between;
-      flex-direction: column;
-      gap: 20px;
-      align-items: flex-start;
-      width: 45%;
-      @media screen and (max-width: 1024px) {
-        width: 100%;
-      }
-      span {
-        color: #3f3f46;
-        font-weight: 400;
-        line-height: 24px; /* 150% */
-      }
-      p {
-        color: var(--bluee, #5729d4);
-        font-weight: 700;
-        text-decoration-line: underline;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        flex-direction: column;
         gap: 10px;
       }
     }
