--- a/src/Components/Pages/LandingPage/LandingPage.scss
+++ b/src/Components/Pages/LandingPage/LandingPage.scss
@@ -250,6 +250,9 @@
             width: 90px;
             height: 90px;
           }
+          p {
+            font-weight: 600;
+          }
         }
       }
       ul {
@@ -260,7 +263,7 @@
         gap: 10px;
         list-style: none;
       }
-      p {
+      .learn {
         color: var(--bluee, #5729d4);
         font-weight: 700;
         text-decoration-line: underline;
@@ -471,12 +474,16 @@
     justify-content: center;
     flex-direction: column;
     gap: 40px;
-    padding: 100px 0px;
+    padding: 100px 20px;
+    h1 {
+      color: white;
+    }
     p {
       text-align: center;
+      color: white;
     }
     button {
-      background-color: black;
+      background: #ae8bea;
       color: white;
       border-radius: 20px;
       height: 50px;
