--- a/src/Components/Pages/LandingPage/LandingPage.scss
+++ b/src/Components/Pages/LandingPage/LandingPage.scss
@@ -267,6 +267,7 @@
         color: var(--bluee, #5729d4);
         font-weight: 700;
         text-decoration-line: underline;
+        cursor: pointer;
       }
     }
   }
