--- a/src/Components/Pages/Auth-Pages/Login/Login.scss
+++ b/src/Components/Pages/Auth-Pages/Login/Login.scss
@@ -153,6 +153,10 @@
             width: 80%;
           }
         }
+        button:disabled {
+          opacity: 0.5;
+          cursor: not-allowed;
+        }
       }
 
       button {
