login page border radius

--- a/src/Components/Pages/Auth-Pages/Login/Login.scss
+++ b/src/Components/Pages/Auth-Pages/Login/Login.scss
@@ -120,6 +120,7 @@
             border: 1px solid var(--gray-200, #e4e4e7);
             background: var(--base-white, #fff);
             width: 100%;
+            border-radius: 5px;
           }
         }
 
